added google verification

--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -26,6 +26,7 @@ const url = `https://w-plus-plus.vercel.app${Astro.url.pathname}`;
     <meta property="og:image" content="https://w-plus-plus.vercel.app/wpp-logo.png" />
     <meta property="og:url" content={url} />
     <meta property="og:type" content="website" />
+    <meta name="google-site-verification" content="dUyQJVneef4kdiIgCIxFG1_j9E1ysSTgkuZMFYNhA1M" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
