added google verification for wplusplus.org

--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const url = `https://wplusplus.org${Astro.url.pathname}`;
     <meta property="og:url" content={url} />
     <meta property="og:type" content="website" />
     <meta name="google-site-verification" content="dUyQJVneef4kdiIgCIxFG1_j9E1ysSTgkuZMFYNhA1M" />
-
+    <meta name="google-site-verification" content="zMcI4rNlUMXM-jvxQ5YA2uMk4dFbIErvMRvkaEUt9So" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content={title} />
