--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -33,6 +33,7 @@ const url = `https://wplusplus.org${Astro.url.pathname}`;
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content="W++ is a chaotic, Python-style scripting language for .NET. Built for laughs, powered by sloths." />
     <meta name="twitter:image" content="https://wplusplus.org/wpp-logo.png" />
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
     <style>
       body {
