--- a/docs/src/pages/contribute.astro
+++ b/docs/src/pages/contribute.astro
@@ -59,7 +59,7 @@ git push origin fix/god-mode</code></pre>
     <section>
       <h2>💬 Community</h2>
       <p>
-        Join our <a href="https://discord.gg/a37hQPPDrp" target="_blank">official Discord server</a> to chat, brainstorm, or scream into the void.<br />
+        Join our <a href="https://discord.gg/XMJ6YXQcfA" target="_blank">official Discord server</a> to chat, brainstorm, or scream into the void.<br />
         You can also open issues on GitHub if you’re socially allergic.
       </p>
     </section>
